# lib-version

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  dockerRelease.yml  publish.yaml
lib_version/: __init__.py  version_util.py  version_utils.py
lib_version.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_version.py
